TEIID-292 changed back to synch io on the client.